first session ui, adapter and get characters

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#a00000</color>
+    <color name="colorPrimaryDark">#630308</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black">#000000</color>
+    <color name="mid_black">#191919</color>
+    <color name="top_black">#323232</color>
+    <color name="fui_transparent">#00000000</color>
 </resources>
