--- a/app/src/main/res/drawable/background_gradient_color.xml
+++ b/app/src/main/res/drawable/background_gradient_color.xml
@@ -3,9 +3,9 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#a00000"
-                android:centerColor="#630308"
-                android:endColor="#1c0000"
+                android:startColor="#292c40"
+                android:centerColor="#12131c"
+                android:endColor="#000000"
                 android:angle="45"/>
         </shape>
     </item>
