fix problem with drawable files, and fixed pagination

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <!-- Splash Screen Theme -->
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_background</item>
+        <!-- <item name="android:windowBackground">@drawable/backgroundsplash</item> -->
     </style>
 
 </resources>
