--- a/app/src/main/res/layout/dialog_error.xml
+++ b/app/src/main/res/layout/dialog_error.xml
@@ -6,9 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
-    android:background="@drawable/modal_background"
-    android:elevation="10dp">
-
+    android:elevation="10dp"
+    android:background="@drawable/modal_background">
 
     <!-- IMAGE -->
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -52,11 +51,11 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/button_background"
         android:elevation="6dp"
         android:fontFamily="@font/product_sans_bold"
         android:stateListAnimator="@null"
         android:text="OK"
+        android:background="@drawable/button_background"
         android:textColor="@android:color/white"
         android:translationZ="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
