--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,91 +3,83 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.pasotti.matteo.wikiheroes.utils.CustomScrollView
-        android:id="@+id/scrollView"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
-            <android.support.constraint.ConstraintLayout
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:contentScrim="@drawable/blur_background"
+                app:expandedTitleTextAppearance="@android:color/transparent"
+                android:fitsSystemWindows="true">
 
-
-                <!-- IMAGE AND NAME -->
                 <ImageView
                     android:id="@+id/imageCharacter"
                     android:layout_width="match_parent"
-                    android:layout_height="280dp"
+                    android:layout_height="350dp"
                     android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
                     android:transitionName="@string/transition_character_image"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     tools:background="@drawable/ironman" />
 
 
-                <TextView
-                    android:id="@+id/name"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbarCharacterDetail"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:background="@drawable/background_character_title_detail"
-                    android:gravity="center_vertical"
-                    android:paddingBottom="20dp"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/product_sans_bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageCharacter"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="Iron Man"
-                    android:transitionName="@string/transition_character_name"/>
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 
-            </android.support.constraint.ConstraintLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
 
 
-            <android.support.constraint.ConstraintLayout
+
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <!-- <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true"></android.support.v7.widget.CardView> -->
+
+            <TextView
+                android:id="@+id/characterDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:fontFamily="@font/product_sans_regular"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                tools:text="@string/lorem"
+                android:text="@string/lorem"/>
 
 
-                <TextView
-                    android:id="@+id/characterDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/product_sans_regular"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    tools:text="@string/lorem"
-                    android:text="@string/lorem"/>
+        </android.support.v4.widget.NestedScrollView>
 
 
-
-            </android.support.constraint.ConstraintLayout>
-
-
-
-
-        </LinearLayout>
-
-
-    </com.pasotti.matteo.wikiheroes.utils.CustomScrollView>
+    </android.support.design.widget.CoordinatorLayout>
 
 </layout>
