--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black">#000000</color>
+    <color name="black60">#99000000</color>
     <color name="mid_black">#191919</color>
     <color name="top_black">#323232</color>
     <color name="fui_transparent">#00000000</color>
