--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,6 +9,7 @@
 
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -51,6 +52,7 @@
 
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
@@ -63,18 +65,52 @@
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true"></android.support.v7.widget.CardView> -->
 
-            <TextView
-                android:id="@+id/characterDescription"
+            <LinearLayout
+                android:id="@+id/rootScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:fontFamily="@font/product_sans_regular"
-                android:textColor="@android:color/black"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                tools:text="@string/lorem"
-                android:text="@string/lorem"/>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/characterDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    tools:text="@string/lorem"
+                    android:text="@string/lorem"/>
+
+                <TextView
+                    android:id="@+id/secondTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    tools:text="@string/lorem"
+                    android:text="@string/lorem"/>
+
+                <TextView
+                    android:id="@+id/thirdTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/product_sans_regular"
+                    android:textColor="@android:color/black"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    tools:text="@string/lorem"
+                    android:text="@string/lorem"/>
+
+            </LinearLayout>
 
 
         </android.support.v4.widget.NestedScrollView>
