--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -84,18 +84,11 @@
                     tools:text="@string/lorem"
                     android:text="@string/lorem"/>
 
-                <TextView
-                    android:id="@+id/secondTxt"
+                <FrameLayout
+                    android:id="@+id/container_comics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/product_sans_regular"
-                    android:textColor="@android:color/black"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    tools:text="@string/lorem"
-                    android:text="@string/lorem"/>
+                    android:layout_marginTop="20dp"/>
 
                 <TextView
                     android:id="@+id/thirdTxt"
