--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="character"
+            type="com.pasotti.matteo.wikiheroes.models.Character"/>
+    </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -82,7 +88,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     tools:text="@string/lorem"
-                    android:text="@string/lorem"/>
+                    android:text="@{character.description}"/>
 
                 <FrameLayout
                     android:id="@+id/container_comics"
