new layout for horizontal image, and changed background color

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_gradient_color"
+        android:background="@color/mid_black"
         tools:context=".view.ui.home.HomeActivity">
 
         <androidx.recyclerview.widget.RecyclerView
