--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,7 +11,8 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/mid_black">
 
 
         <com.google.android.material.appbar.AppBarLayout
@@ -83,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:fontFamily="@font/product_sans_regular"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -102,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:fontFamily="@font/product_sans_regular"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
