--- a/app/src/main/res/layout/fragment_horizontal_gallery.xml
+++ b/app/src/main/res/layout/fragment_horizontal_gallery.xml
@@ -5,7 +5,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/mid_black"
+        android:layout_marginLeft="16dp">
 
 
         <TextView
@@ -13,8 +15,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/product_sans_bold"
-            android:textColor="@color/black"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
+            android:textAllCaps="true"
             tools:text="Title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -23,11 +26,11 @@
             android:id="@+id/list_items"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/section_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="15dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
