--- a/app/src/main/res/layout/item_comic.xml
+++ b/app/src/main/res/layout/item_comic.xml
@@ -40,8 +40,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:background="@color/black60">
+                    android:layout_gravity="bottom">
 
                     <TextView
                         android:id="@+id/name"
@@ -51,7 +50,8 @@
                         tools:text="Spiderman"
                         android:maxLines="1"
                         android:textColor="@android:color/white"
-                        android:textSize="14sp"
+                        android:textSize="11sp"
+                        android:background="@drawable/background_character_title"
                         android:transitionName="@string/transition_character_name"
                         android:fontFamily="@font/product_sans_bold"
                         app:layout_constraintEnd_toEndOf="parent"
