--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -83,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
-                    android:fontFamily="@font/product_sans_regular"
+                    android:fontFamily="@font/product_sans_italic"
                     android:textColor="@android:color/white"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
@@ -97,8 +97,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"/>
 
+                <FrameLayout
+                    android:id="@+id/container_series"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"/>
+
                 <TextView
-                    android:id="@+id/thirdTxt"
+                    android:id="@+id/text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
@@ -109,6 +115,7 @@
                     android:layout_marginEnd="16dp"
                     tools:text="@string/lorem"
                     android:text="@string/lorem"/>
+
 
             </LinearLayout>
 
