fix recycleview for creators

--- a/app/src/main/res/layout/creator_row.xml
+++ b/app/src/main/res/layout/creator_row.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/fui_transparent">
 
@@ -23,8 +23,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/creators_list"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toEndOf="@+id/role"
             app:layout_constraintTop_toTopOf="@+id/role"
