--- a/app/src/main/res/layout/activity_creator.xml
+++ b/app/src/main/res/layout/activity_creator.xml
@@ -6,57 +6,58 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fui_transparent"
-        android:layout_marginLeft="16dp">
+        android:background="@color/mid_black">
 
-
-        <TextView
-            android:id="@+id/section_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/product_sans_bold"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textAllCaps="true"
-            android:text="COLLECTION"
-            tools:text="Title"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/seeall_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/product_sans_bold"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:layout_marginRight="16dp"
-            android:textAllCaps="true"
-            android:text="SEE ALL"
-            tools:text="SEE ALL"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <View
-            android:id="@+id/line"
+        <include
+            android:id="@+id/toolbar_creator_detail"
+            layout="@layout/toolbar_main"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/section_title"
-            android:layout_marginEnd="16dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/creator_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textAllCaps="true"
+            android:transitionName="@string/transition_creator_name"
+            tools:text="CREATOR NAME"
+            android:fontFamily="@font/product_sans_bold"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_creator_detail"/>
+
+        <!-- could be comics/series/events -->
+        <TextView
+            android:id="@+id/title_creator_section"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/product_sans_bold"
+            android:textSize="18sp"
+            android:textAllCaps="true"
+            tools:text=" : COMICS"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_creator_detail"
+            app:layout_constraintStart_toEndOf="@+id/creator_name_text"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_items"
+            android:id="@+id/list_creator_items"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/line"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:layoutAnimation="@anim/layout_animation_slide_bottom"
+            app:layout_constraintTop_toBottomOf="@+id/creator_name_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -70,11 +71,12 @@
             android:indeterminateDrawable="@drawable/custom_progress_loader"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line"
+            app:layout_constraintTop_toBottomOf="@+id/title_creator_section"
             app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone"/>
 
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
