--- a/app/src/main/res/layout/comic_detail.xml
+++ b/app/src/main/res/layout/comic_detail.xml
@@ -65,7 +65,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ScrollView
+                <androidx.core.widget.NestedScrollView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@color/fui_transparent"
@@ -219,7 +219,7 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </ScrollView>
+                </androidx.core.widget.NestedScrollView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
