--- a/app/src/main/res/layout/item_small_image.xml
+++ b/app/src/main/res/layout/item_small_image.xml
@@ -17,7 +17,8 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:background="@color/mid_black"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
 
 
         <androidx.cardview.widget.CardView
