handle get series when we select a creator of a series. some refactoring using lint.  added handling savedInstanceState

--- a/app/src/main/res/layout/fragment_horizontal_gallery.xml
+++ b/app/src/main/res/layout/fragment_horizontal_gallery.xml
@@ -46,7 +46,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="15dp"
-            android:nestedScrollingEnabled="true"/>
+            android:nestedScrollingEnabled="false"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
