--- a/app/src/main/res/layout/activity_see_all.xml
+++ b/app/src/main/res/layout/activity_see_all.xml
@@ -61,7 +61,7 @@
                     tools:text="CREATOR NAME" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list_creator_items"
+                    android:id="@+id/list_items"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
