--- a/app/src/main/res/layout/fragment_home_characters.xml
+++ b/app/src/main/res/layout/fragment_home_characters.xml
@@ -6,8 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mid_black"
-        tools:context=".view.ui.home.HomeActivity">
+        android:background="@color/mid_black">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_characters"
