— change color of navigation bar with dark grey and white icons — develop logic update comics one a week — develop screen of comics of the week — develop feature of selection of the week for comics — develop main component navigation for home page

--- a/app/src/main/res/layout/activity_see_all.xml
+++ b/app/src/main/res/layout/activity_see_all.xml
@@ -57,6 +57,7 @@
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
                     android:transitionName="@string/transition_creator_name"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:text="CREATOR NAME" />
 
