--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="?android:attr/windowBackground"
+            android:theme="@style/Widget.BottomNavigationView"
+            app:itemTextColor="@color/navigation_home_selector"
+            app:itemIconTint="@color/navigation_home_selector"
+            android:background="@color/darkGrey"
             app:layout_behavior="com.pasotti.matteo.wikiheroes.utils.BottomNavigationBehavior"
             app:menu="@menu/navigation"/>
 
