--- a/app/src/main/res/drawable/bg_gradient_toolbar.xml
+++ b/app/src/main/res/drawable/bg_gradient_toolbar.xml
@@ -3,8 +3,7 @@
     <item>
         <shape>
             <gradient
-                android:startColor="@color/mid_black"
-                android:centerColor="@color/black60"
+                android:startColor="@color/black60"
                 android:endColor="@color/darkGrey"
                 android:angle="90"/>
         </shape>
