--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -174,6 +174,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp" />
 
+
+                <include
+                    layout="@layout/fragment_copyright"
+                    android:id="@+id/container_copyright"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp" />
+
                 <FrameLayout
                     android:id="@+id/container_events"
                     android:layout_width="match_parent"
