--- a/app/src/main/res/layout/comic_detail.xml
+++ b/app/src/main/res/layout/comic_detail.xml
@@ -206,6 +206,59 @@
                             app:layout_constraintTop_toBottomOf="@+id/description_detail"/>
 
 
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/marvel_link_layout"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@+id/container_more_details"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginLeft="16dp">
+
+                            <TextView
+                                android:id="@+id/label_marvel_link"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="MARVEL LINK"
+                                android:textSize="18sp"
+                                android:textAllCaps="true"
+                                android:textColor="@android:color/white"
+                                android:fontFamily="@font/product_sans_bold"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"/>
+
+                            <View
+                                android:id="@+id/line"
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="16dp"
+                                android:background="@android:color/darker_gray"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/label_marvel_link"/>
+
+                            <TextView
+                                android:id="@+id/marvel_link"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@android:color/white"
+                                tools:text="link to marvel"
+                                android:autoLink="all"
+                                android:clickable="true"
+                                android:textColorLink="@android:color/white"
+                                android:text="@{viewModel.comicUrl}"
+                                android:fontFamily="@font/product_sans_italic"
+                                android:layout_marginTop="10dp"
+                                app:layout_constraintTop_toBottomOf="@+id/line"
+                                app:layout_constraintStart_toStartOf="parent" />
+
+
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
                         <FrameLayout
                             android:id="@+id/container_more_comics"
@@ -215,7 +268,17 @@
                             android:visibility="@{viewModel.moreComicsVisibility}"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/container_more_details" />
+                            app:layout_constraintTop_toBottomOf="@+id/marvel_link_layout" />
+
+                        <include
+                            layout="@layout/fragment_copyright"
+                            android:id="@+id/container_copyright"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/container_more_comics"/>
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
