--- a/app/src/main/res/layout/comic_detail.xml
+++ b/app/src/main/res/layout/comic_detail.xml
@@ -180,6 +180,15 @@
                             app:layout_constraintBaseline_toBaselineOf="@+id/pagesLabel"
                             tools:text="100" />
 
+                        <include
+                            android:id="@+id/shop_button"
+                            layout="@layout/add_to_shop_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintBottom_toBottomOf="@+id/image_detail"
+                            app:layout_constraintStart_toEndOf="@+id/image_detail"
+                            android:layout_marginStart="16dp" />
+
                         <TextView
                             android:id="@+id/description_detail"
                             android:layout_width="0dp"
