--- a/app/src/main/res/layout/fragment_home_comics.xml
+++ b/app/src/main/res/layout/fragment_home_comics.xml
@@ -110,6 +110,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:progress="25"
+                    android:elevation="5dp"
                     android:progressDrawable="@drawable/custom_progressbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
