--- a/app/src/main/res/layout/fragment_home_desk.xml
+++ b/app/src/main/res/layout/fragment_home_desk.xml
@@ -24,12 +24,49 @@
                 android:background="@color/fui_transparent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/shop_section"
+                    android:id="@+id/characters_section"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="16dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/label_characters_list"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Characters"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/white"
+                        android:fontFamily="@font/product_sans_bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/list_characters_items"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:layout_constraintTop_toBottomOf="@+id/label_characters_list"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="15dp"
+                        android:nestedScrollingEnabled="false"/>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/shop_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/characters_section"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
                     android:visibility="gone">
 
@@ -38,9 +75,8 @@
                         android:id="@+id/label_shop_list"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SHOP LIST"
+                        android:text="Shop List"
                         android:textSize="18sp"
-                        android:textAllCaps="true"
                         android:textColor="@android:color/white"
                         android:fontFamily="@font/product_sans_bold"
                         app:layout_constraintStart_toStartOf="parent"
