--- a/app/src/main/res/layout/fragment_horizontal_gallery.xml
+++ b/app/src/main/res/layout/fragment_horizontal_gallery.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
