developed search for characters and comics, added options selection for search

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="whiteFadeBg">#f0ffffff</color>
 
     <color name="yellow">#ffff32</color>
+    <color name="dark_yellow">#ffc107</color>
 
 
 </resources>
