--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -13,64 +14,146 @@
             android:layout_width="0dp"
             android:layout_height="?actionBarSize"
             android:background="@drawable/bg_gradient_toolbar"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/back_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_arrow_back_white_24dp"
                 android:layout_marginStart="16dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/ic_arrow_back_white_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/search_edit"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="30dp"
-                android:hint="Search.."
-                android:paddingLeft="16dp"
-                android:singleLine="true"
-                android:imeOptions="actionSearch"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/edittxt_rounded_corners"
-                app:layout_constraintTop_toTopOf="parent"
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:inputType="textNoSuggestions"
+                android:paddingStart="16dp"
+                android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/back_arrow"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- SEARCH OPTIONS -->
+        <CheckBox
+            android:id="@+id/option_character_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_option_search"
+            android:button="@null"
+            android:fontFamily="@font/product_sans_regular"
+            android:padding="6dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/character"
+            android:textColor="@color/txt_color_state_list"
+            app:layout_constraintEnd_toStartOf="@+id/option_comic_textview"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+
+        <CheckBox
+            android:id="@+id/option_comic_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_option_search"
+            android:button="@null"
+            android:fontFamily="@font/product_sans_regular"
+            android:padding="6dp"
+            android:text="@string/comic"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/txt_color_state_list"
+            app:layout_constraintEnd_toStartOf="@+id/option_series_textview"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@+id/option_character_textview"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+        <CheckBox
+            android:id="@+id/option_series_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_option_search"
+            android:button="@null"
+            android:fontFamily="@font/product_sans_regular"
+            android:padding="6dp"
+            android:text="@string/series"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/txt_color_state_list"
+            app:layout_constraintEnd_toStartOf="@+id/option_person_textview"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@+id/option_comic_textview"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+        <CheckBox
+            android:id="@+id/option_person_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_option_search"
+            android:button="@null"
+            android:fontFamily="@font/product_sans_regular"
+            android:padding="6dp"
+            android:text="@string/person"
+            android:textColor="@color/txt_color_state_list"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toEndOf="@+id/option_series_textview"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_results"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/option_character_textview" />
+
+        <TextView
+            android:id="@+id/text_intro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/lightGrey"
+            android:fontFamily="@font/product_sans_italic"
+            android:textSize="14sp"
+            android:visibility="invisible"
+            tools:text="Select what you want to search"
+            android:text="@string/select_what_you_want_to_search"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/option_character_textview"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:indeterminate="true"
             android:indeterminateDrawable="@drawable/custom_progress_loader"
             android:progress="25"
-            android:layout_marginTop="30dp"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/option_character_textview" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
